# Native-Language-Disease-QA-Bot

./: .dockerignore  Dockerfile  README.md  claude.md  main.py  pyproject.toml  ur.txt
.cursor/rules/: dev-rules.mdc
app/: package-lock.json
app/design_system/: DESIGN.md
app/src/: App.jsx  index.css  layout.css
app/src/components/: ChatView.jsx  DocumentView.jsx  Sidebar.jsx  TopNav.jsx
config/: prompt.yaml  rag.yaml
embeddings/chroma_db/: chroma.sqlite3
scripts/: smoke_test_embeddings.py  smoke_test_rag.py  test_ollama.py  test_openrouter_key.py  trigger_full_embedding_pipeline.py
src/: __init__.py  constants.py  llms.py  run.py
src/components/: __init__.py
src/core/: __init__.py  document_parser.py
src/dependencies/: __init__.py
src/embeddings/: __init__.py  chunker.py  embedder.py
src/models/: __init__.py
src/pipelines/: __init__.py  ingestion_pipeline.py
src/retrievers/: retriever.py
src/routers/: __init__.py  chat.py  documents.py
src/schemas/: __init__.py
src/schemas/pydantic/: api_schemas.py  rag_schemas.py
src/schemas/sqlalchemy/: __init__.py
src/services/: __init__.py  chat_service.py  rag_service.py
src/vectorstores/: __init__.py  chroma_store.py  vector_db_service.py
tests/: __init__.py
tests/core/: test_document_parser.py
tests/pipelines/: test_ingestion_pipeline.py
